force-app/main/default/objects/Hotel_Reservation__c/Hotel_Reservation__c.object-meta.xml
<CustomObject>
    <label>Hotel Reservation</label>
    <nameField>
        <label>Hotel Reservation #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotel Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>