force-app/main/default/objects/Hotel_Reservation__c/fields/check_in__c.field-meta.xml
<CustomField>
    <fullName>check_in__c</fullName>
    <label>check in</label>
    <type>DateTime</type>
</CustomField>