force-app/main/default/objects/Hotel_Reservation__c/fields/Hotel_Details__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Details__c</fullName>
    <inlineHelpText>For itinerary items details.</inlineHelpText>
    <label>Hotel Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>