force-app/main/default/objects/Hotel_Reservation__c/fields/Twin_Share__c.field-meta.xml
<CustomField>
    <fullName>Twin_Share__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Twin Share</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hotel Reservations (Twin Share)</relationshipLabel>
    <relationshipName>Hotel_Reservations1</relationshipName>
    <type>Lookup</type>
</CustomField>