force-app/main/default/objects/Hotel_Reservation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>check_in__c</columns>
    <columns>Check_out__c</columns>
    <columns>Hotel__c</columns>
    <columns>Hotel_Details__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Hotel Reservations</label>
</ListView>